# dslyrics

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: lyrics.pest  main.rs  parser.rs
tests/: glitch_song.txt  parser.rs
